# ros2_prototypes

c_fixed_msg/: CMakeLists.txt  ser.c
message_api/: CMakeLists.txt  build.sh
message_api/src/: LargeMessage.h  SmallMessage.h  main_large_boost_produce_consume_backend_plain.cpp  main_large_boost_produce_consume_backend_proto.cpp  main_large_boost_produce_consume_method.cpp  main_large_boost_produce_copy_consume_method.cpp  main_large_produce_consume_struct.cpp  main_large_produce_copy_consume_struct.cpp  main_produce_consume_backend_plain.cpp  main_produce_consume_backend_proto.cpp  main_produce_consume_method.cpp  main_produce_consume_struct.cpp  main_produce_copy_consume_struct.cpp
message_api/src/proto/: large_message.pb.cc  large_message.pb.h  large_message.proto  small_message.pb.cc  small_message.pb.h  small_message.proto
serialization_benchmark/: Makefile  results.md  small_message.capnp  small_message.proto  small_message.thrift  test_capnp.cpp  test_protobuf.cpp  test_thrift.cpp
serialization_benchmark/rosmsg_benchmark/: CMakeLists.txt
serialization_benchmark/rosmsg_benchmark/msg/: SmallMessage.msg
serialization_benchmark/rosmsg_benchmark/src/: test_rosmsg.cpp
serialization_benchmark/src/rosmsg_benchmark/: CMakeLists.txt  package.xml
serialization_benchmark/src/rosmsg_benchmark/msg/: LargeMessage.msg
serialization_benchmark/src/rosmsg_benchmark/src/: test_rosmsg.cpp
storage_backends/: storage_backend.cpp  storage_backend.py
